--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Material Icons';
+    font-style: normal;
+    font-weight: 400;
+    src: url(fonts/Material-Icons.woff2) format('woff2');
+
+}
 .keyboard {
     position: fixed;
     left: 0;
@@ -13,6 +20,21 @@
 .keyboard--hidden {
     bottom: -100%;
 }
+.material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+  }
 
 .keyboard__keys {
     text-align: center;
